adjust navbar elements styling, give width and height to avoid layout shift

--- a/src/app/ui/Dropdown.module.css
+++ b/src/app/ui/Dropdown.module.css
@@ -4,8 +4,10 @@
   flex-direction: column;
   place-items: center;
   font-size: 1rem;
-  color: var(--icon-color);
   cursor: pointer;
+  color: var(--icon-color);
+  width: 50px;
+  height: 50px;
 }
 
 .menu {
